fix(CardQuestion): add align-items: center for label

--- a/src/widgets/cards/CardQuestion/CardQuestion.scss
+++ b/src/widgets/cards/CardQuestion/CardQuestion.scss
@@ -22,6 +22,7 @@
 
   &__option-wrapper {
     display: flex;
+    align-items: center;
     gap: 15px;
 
     :hover {
